Added product insert page

--- a/web/src/main/java/com/logicify/shoppingcart/Index.html
+++ b/web/src/main/java/com/logicify/shoppingcart/Index.html
@@ -24,6 +24,10 @@
             <a href="#" wicket:id="linkToCategoriesListPage">
                 <wicket:container wicket:id="linksText"/>
             </a>
+            <br/>
+            <a href="#" wicket:id="linkToInsertProductPage">
+                <wicket:container wicket:id="linksText"/>
+            </a>
         </div>
     </div>
 </body>
