--- a/web/src/main/java/com/logicify/shoppingcart/InsertProduct.html
+++ b/web/src/main/java/com/logicify/shoppingcart/InsertProduct.html
@@ -7,7 +7,25 @@
     <link rel="stylesheet" href="css/AdminModule.css"/>
 
     <script type="text/javascript" language="javascript" src="js/jquery-1.6.4.js"></script>
-
+    <script type="text/javascript" language="javascript" src="js/tiny_mce/tiny_mce.js"></script>
+    <script language="javascript" type="text/javascript">
+        tinyMCE.init({
+                theme : "advanced",
+                mode : "textareas",
+                plugins : "spellchecker,bbcode",
+                theme_advanced_buttons1 : "bold,italic,underline,undo,redo,link,unlink,image,forecolor,styleselect,removeformat,cleanup,code",
+                theme_advanced_buttons2 : "",
+                theme_advanced_buttons3 : "",
+                theme_advanced_toolbar_location : "top",
+                theme_advanced_toolbar_align : "left",
+                entity_encoding : "raw",
+                add_unload_trigger : false,
+                remove_linebreaks : false,
+                theme_advanced_styles : "Code=codeStyle;Quote=quoteStyle",
+                inline_styles : false,
+                convert_fonts_to_spans : false
+        });
+    </script>
 
 </head>
 
@@ -39,7 +57,7 @@
                         <tr>
                             <td class="LeftColumnName">Product description:</td>
                             <td>
-                                <textarea cols="40" rows="7" wicket:id="ProductDescription" class="markItUp bbcode"></textarea>
+                                <textarea cols="80" rows="15" wicket:id="ProductDescription" class="bbcode"></textarea>
                             </td>
                         </tr>
                         <tr>
