--- a/web/src/main/java/com/logicify/shoppingcart/InsertProduct.html
+++ b/web/src/main/java/com/logicify/shoppingcart/InsertProduct.html
@@ -10,67 +10,70 @@
     <script type="text/javascript" language="javascript" src="js/tiny_mce/tiny_mce.js"></script>
     <script language="javascript" type="text/javascript">
         tinyMCE.init({
-                theme : "advanced",
-                mode : "textareas",
-                plugins : "spellchecker,bbcode",
-                theme_advanced_buttons1 : "bold,italic,underline,undo,redo,link,unlink,image,forecolor,styleselect,removeformat,cleanup,code",
-                theme_advanced_buttons2 : "",
-                theme_advanced_buttons3 : "",
-                theme_advanced_toolbar_location : "top",
-                theme_advanced_toolbar_align : "left",
-                entity_encoding : "raw",
-                add_unload_trigger : false,
-                remove_linebreaks : false,
-                theme_advanced_styles : "Code=codeStyle;Quote=quoteStyle",
-                inline_styles : false,
-                convert_fonts_to_spans : false
+            theme : "advanced",
+            mode : "textareas",
+            plugins : "spellchecker,bbcode, lists",
+            theme_advanced_buttons1 : "bold,italic,underline,undo,redo,link,unlink,image,forecolor,styleselect,removeformat,cleanup,code,bullist,numlist",
+            theme_advanced_buttons2 : "",
+            theme_advanced_buttons3 : "",
+            theme_advanced_toolbar_location : "top",
+            theme_advanced_toolbar_align : "left",
+            entity_encoding : "raw",
+            add_unload_trigger : false,
+            remove_linebreaks : false,
+            theme_advanced_styles : "Code=codeStyle;Quote=quoteStyle",
+            inline_styles : false,
+            convert_fonts_to_spans : false
         });
     </script>
-
 </head>
 
-
-
-
 <body>
-    <div class="pageWrapper">
+<div class="pageWrapper">
 
-        <div id="header">
-            <h2>Product Insert</h2>
-        </div>
+    <div id="header">
+        <h2>Product Insert</h2>
+    </div>
 
-        <div class="clear"></div>
+    <div class="clear"></div>
 
-        <div class="pageContentBlockFullSize">
-
+    <div class="pageContentBlockFullSize">
+        <form class="insertProductForm" wicket:id="form">
             <div class="pageContentLeftBig">
-                <form class="insertProductForm"  wicket:id="form">
-                    <table>
-                        <tr>
-                            <td class="LeftColumnName">Product name: </td>
-                            <td><input type="text" wicket:id="ProductName"></td>
-                        </tr>
-                        <tr>
-                            <td class="LeftColumnName">Product price: </td>
-                            <td><input type="text" wicket:id="ProductPrice"></td>
-                        </tr>
-                        <tr>
-                            <td class="LeftColumnName">Product description:</td>
-                            <td>
-                                <textarea cols="80" rows="15" wicket:id="ProductDescription" class="bbcode"></textarea>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><input type="submit" wicket:id="submitForm" value="OK"></td>
-                        </tr>
-                    </table>
-                </form>
+                <table>
+                    <tr>
+                        <td class="LeftColumnName">Product name:</td>
+                        <td><input type="text" wicket:id="ProductName"></td>
+                    </tr>
+                    <tr>
+                        <td class="LeftColumnName">Product price:</td>
+                        <td><input type="text" wicket:id="ProductPrice"></td>
+                    </tr>
+                    <tr>
+                        <td class="LeftColumnName">Product description:</td>
+                        <td>
+                            <textarea cols="80" rows="15" wicket:id="ProductDescription" class="bbcode"></textarea>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><input type="submit" wicket:id="submitForm" value="OK"></td>
+                    </tr>
+                </table>
             </div>
 
+            <div class="pageContentRightSmall">
+                <p>Add category</p>
+                <ul>
+                    <li wicket:id="categoryList">
+                         <input type="checkbox">
+                        <br/>
+                    </li>
+                </ul>
+            </div>
 
-
-        </div>
+        </form>
     </div>
+</div>
 </body>
 
 </html>
