--- a/web/src/main/java/com/logicify/shoppingcart/InsertProduct.html
+++ b/web/src/main/java/com/logicify/shoppingcart/InsertProduct.html
@@ -12,8 +12,8 @@
         tinyMCE.init({
             theme : "advanced",
             mode : "textareas",
-            plugins : "spellchecker,bbcode, lists",
-            theme_advanced_buttons1 : "bold,italic,underline,undo,redo,link,unlink,image,forecolor,styleselect,removeformat,cleanup,code,bullist,numlist",
+            plugins : "spellchecker,bbcode",
+            theme_advanced_buttons1 : "bold,italic,underline,undo,redo,link,unlink,image,forecolor,styleselect,removeformat,cleanup,code",
             theme_advanced_buttons2 : "",
             theme_advanced_buttons3 : "",
             theme_advanced_toolbar_location : "top",
@@ -65,7 +65,8 @@
                 <p>Add category</p>
                 <ul>
                     <li wicket:id="categoryList">
-                         <input type="checkbox">
+                        <span wicket:id="name">categoryName</span>
+                        <input wicket:id="check" type="checkbox"/>
                         <br/>
                     </li>
                 </ul>
