--- a/web/src/main/java/com/logicify/shoppingcart/user/CategoryDetails.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/CategoryDetails.html
@@ -8,19 +8,18 @@
 </head>
 
 <body>
-<div class="pageWrapper">
+    <div class="pageWrapper">
 
-    <div id="header">
-        <h2>Category</h2>
-    </div>
+        <div id="header">
+            <h2>Category</h2>
+        </div>
 
-    <div class="clear"></div>
+        <div class="clear"></div>
 
-    <div class="pageContentBlockFullSize">
-        <form wicket:id="updateCategoryForm">
+        <div class="pageContentBlockFullSize">
+
             <div class="pageContentLeftMedium">
                 <h3 wicket:id="categoryName"></h3>
-
                 <p wicket:id="categoryDescription"></p>
             </div>
 
@@ -28,17 +27,16 @@
                 <h3>Products in category:</h3>
                 <ul>
                     <li wicket:id="productList">
-                        <span wicket:id="name">productName</span>
-                        <input wicket:id="check" type="checkbox"/>
+                        <a href="CategoryDetails.html#" wicket:id="linkToProduct">
+                            <wicket:container wicket:id="linksText"/>
+                        </a>
                         <br/>
                     </li>
                 </ul>
             </div>
 
-            <input type="submit" wicket:id="submitForm" value="OK">
-        </form>
+        </div>
     </div>
-</div>
 </body>
 
 </html>
