Added insert category page and productinsert validation

--- a/web/src/main/java/com/logicify/shoppingcart/admin/Index.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/Index.html
@@ -17,7 +17,19 @@
         <div class="clear"></div>
 
         <div class="pageContentBlockFullSize">
-            <a href="Index.html#" wicket:id="AdminModule">
+            <a href="Index.html#" wicket:id="linkToProductsListPage">
+                <wicket:container wicket:id="linksText"/>
+            </a>
+            <br/>
+            <a href="Index.html#" wicket:id="linkToCategoriesListPage">
+                <wicket:container wicket:id="linksText"/>
+            </a>
+            <br/>
+            <a href="Index.html#" wicket:id="linkToInsertProductPage">
+                <wicket:container wicket:id="linksText"/>
+            </a>
+            <br/>
+            <a href="Index.html#" wicket:id="linkToInsertCategoryPage">
                 <wicket:container wicket:id="linksText"/>
             </a>
         </div>
