Added search admin module

--- a/web/src/main/java/com/logicify/shoppingcart/admin/CategoriesList.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/CategoriesList.html
@@ -19,7 +19,7 @@
         <div class="pageContentBlockFullSize">
             <ul>
                 <li wicket:id ="categoryList">
-                    <a href="ListOfExistingCategories.html#" wicket:id="linkToCategory">
+                    <a href="CategoriesList.html#" wicket:id="linkToCategory">
                         <wicket:container wicket:id="linksText"/>
                     </a>
                     <br/>
