--- a/web/src/main/java/com/logicify/shoppingcart/admin/Index.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/Index.html
@@ -32,6 +32,10 @@
             <a href="Index.html#" wicket:id="linkToInsertCategoryPage">
                 <wicket:container wicket:id="linksText"/>
             </a>
+            <br/>
+            <a href="Index.html#" wicket:id="linkToFindProductPage">
+                <wicket:container wicket:id="linksText"/>
+            </a>
         </div>
     </div>
 </body>
