--- a/web/src/main/java/com/logicify/shoppingcart/admin/ProductInfo.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/ProductInfo.html
@@ -17,6 +17,10 @@
     <div class="clear"></div>
 
     <div class="pageContentBlockFullSize">
+
+        <div class="pageContentLeftMedium feedback" wicket:id="feedback"></div>
+        <div class="clear"></div>
+
         <form wicket:id="updateProductForm">
             <div class="pageContentLeftMedium">
                 <h3 wicket:id="productName"></h3>
