--- a/web/src/main/java/com/logicify/shoppingcart/admin/ProductsList.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/ProductsList.html
@@ -19,7 +19,7 @@
         <div class="pageContentBlockFullSize">
             <ul>
                 <li wicket:id ="productList">
-                    <a href="ListOfExistingProducts.html#" wicket:id="linkToProduct">
+                    <a href="ProductsList.html#" wicket:id="linkToProduct">
                         <wicket:container wicket:id="linksText"/>
                     </a>
                     <br/>
