To database schema and hibernate mapping added new table with tags(keywords) To user module added Paged with list of products and list of categories. Fixes in admin interface(almost ready), need to add keywords field to insert product form Stable

--- a/web/src/main/java/com/logicify/shoppingcart/Index.html
+++ b/web/src/main/java/com/logicify/shoppingcart/Index.html
@@ -20,6 +20,10 @@
             <a href="Index.html#" wicket:id="AdminModule">
                 <wicket:container wicket:id="linksText"/>
             </a>
+            <br/>
+            <a href="Index.html#" wicket:id="UserModule">
+                <wicket:container wicket:id="linksText"/>
+            </a>
         </div>
     </div>
 </body>
