--- a/web/src/main/java/com/logicify/shoppingcart/admin/ProductInsert.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/ProductInsert.html
@@ -59,6 +59,10 @@
                         </td>
                     </tr>
                     <tr>
+                        <td class="LeftColumnName">Product keywords:</td>
+                        <td><input type="text" wicket:id="ProductTags"></td>
+                    </tr>
+                    <tr>
                         <td><input type="submit" wicket:id="submitForm" value="OK"></td>
                     </tr>
                 </table>
