Finished refactoring of the add new  product logic. Stable

--- a/web/src/main/java/com/logicify/shoppingcart/admin/ProductInsert.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/ProductInsert.html
@@ -63,7 +63,7 @@
                         <td><input type="text" wicket:id="ProductTags"></td>
                     </tr>
                     <tr>
-                        <td><input type="submit" wicket:id="submitForm" value="OK"></td>
+                        <td><input type="submit" value="OK"></td>
                     </tr>
                 </table>
             </div>
