--- a/web/src/main/java/com/logicify/shoppingcart/user/Index.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/Index.html
@@ -25,6 +25,10 @@
                 <wicket:container wicket:id="linksText"/>
             </a>
             <br/>
+            <a href="Index.html#" wicket:id="linkToProductSearchPage">
+                <wicket:container wicket:id="linksText"/>
+            </a>
+            <br/>
         </div>
     </div>
 </body>
