--- a/web/src/main/java/com/logicify/shoppingcart/user/ProductSearchPanel.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/ProductSearchPanel.html
@@ -22,6 +22,7 @@
                 <br/>
             </li>
         </ul>
+        <div wicket:id="navigator"></div>
     </wicket:fragment>
 
     <wicket:fragment wicket:id="empty">
