--- a/web/src/main/java/com/logicify/shoppingcart/admin/Index.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/Index.html
@@ -2,41 +2,11 @@
       xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.3-strict.dtd"
       xml:lang="en"
       lang="en">
-<head>
-    <title>Admin page</title>
-    <link rel="stylesheet" href="css/AdminModule.css">
 
-</head>
-<body>
-    <div class="pageWrapper">
-
-        <div id="header">
-            <h2>Main page</h2>
-        </div>
-
-        <div class="clear"></div>
-
-        <div class="pageContentBlockFullSize">
-            <a href="Index.html#" wicket:id="linkToProductsListPage">
-                <wicket:container wicket:id="linksText"/>
-            </a>
-            <br/>
-            <a href="Index.html#" wicket:id="linkToCategoriesListPage">
-                <wicket:container wicket:id="linksText"/>
-            </a>
-            <br/>
-            <a href="Index.html#" wicket:id="linkToInsertProductPage">
-                <wicket:container wicket:id="linksText"/>
-            </a>
-            <br/>
-            <a href="Index.html#" wicket:id="linkToInsertCategoryPage">
-                <wicket:container wicket:id="linksText"/>
-            </a>
-            <br/>
-            <a href="Index.html#" wicket:id="linkToFindProductPage">
-                <wicket:container wicket:id="linksText"/>
-            </a>
-        </div>
+<wicket:extend>
+    <div class="pageContentBlockFullSize">
+            Hello
     </div>
-</body>
+</wicket:extend>
+
 </html>
