--- a/web/src/main/java/com/logicify/shoppingcart/admin/ProductInsert.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/ProductInsert.html
@@ -2,45 +2,11 @@
       xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.3-strict.dtd"
       xml:lang="en"
       lang="en">
-<head>
-    <title>Product insert page</title>
-    <link rel="stylesheet" href="css/AdminModule.css"/>
 
-    <script type="text/javascript" language="javascript" src="js/jquery-1.6.4.js"></script>
-    <script type="text/javascript" language="javascript" src="js/tiny_mce/tiny_mce.js"></script>
-    <script language="javascript" type="text/javascript">
-        tinyMCE.init({
-            theme : "advanced",
-            mode : "textareas",
-            plugins : "spellchecker,bbcode",
-            theme_advanced_buttons1 : "bold,italic,underline,undo,redo,link,unlink,image,forecolor,styleselect,removeformat,cleanup,code",
-            theme_advanced_buttons2 : "",
-            theme_advanced_buttons3 : "",
-            theme_advanced_toolbar_location : "top",
-            theme_advanced_toolbar_align : "left",
-            entity_encoding : "raw",
-            add_unload_trigger : false,
-            remove_linebreaks : false,
-            theme_advanced_styles : "Code=codeStyle;Quote=quoteStyle",
-            inline_styles : false,
-            convert_fonts_to_spans : false
-        });
-    </script>
-</head>
 
-<body>
-<div class="pageWrapper">
-
-    <div id="header">
-        <h2>Product Insert</h2>
-    </div>
-
-    <div class="clear"></div>
-
+<wicket:extend>
     <div class="pageContentBlockFullSize">
-
         <div class="pageContentLeftMedium feedback" wicket:id="feedback"></div>
-
         <form class="insertProductForm" wicket:id="form">
             <div class="pageContentLeftBig">
                 <table>
@@ -67,7 +33,6 @@
                     </tr>
                 </table>
             </div>
-
             <div class="pageContentRightSmall">
                 <p>Add category</p>
                 <ul>
@@ -80,7 +45,6 @@
             </div>
         </form>
     </div>
-</div>
-</body>
+</wicket:extend>
 
 </html>
