--- a/web/src/main/java/com/logicify/shoppingcart/admin/ProductSearch.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/ProductSearch.html
@@ -2,42 +2,27 @@
       xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.3-strict.dtd"
       xml:lang="en"
       lang="en">
-<head>
-    <title>Admin page</title>
-    <link rel="stylesheet" href="css/AdminModule.css">
 
-</head>
-<body>
-    <div class="pageWrapper">
-
-        <div id="header">
-            <h2>Hello! This is admin interface for product/category module for online shopping cart</h2>
+<wicket:extend>
+    <div class="pageContentBlockFullSize">
+        <div class="pageContentLeftMedium">
+            <form wicket:id="searchForm">
+                <input type="text" wicket:id="ProductName">
+                <input type="submit" wicket:id="Find" value="Find">
+            </form>
         </div>
-
-        <div class="clear"></div>
-
-        <div class="pageContentBlockFullSize">
-
-            <div class="pageContentLeftMedium">
-                <form wicket:id="searchForm">
-                    <input type="text" wicket:id="ProductName">
-                    <input type="submit" wicket:id="Find" value="Find">
-                </form>
-            </div>
-
-            <div class="pageContentRightMedium">
-                <span wicket:id="errMsg"></span>
-                <ul>
-                    <li wicket:id="productList">
-                        <a href="ProductsList.html#" wicket:id="linkToProduct">
-                            <wicket:container wicket:id="linksText"/>
-                        </a>
-                        <br/>
-                    </li>
-                </ul>
-            </div>
+        <div class="pageContentRightMedium">
+            <span wicket:id="errMsg"></span>
+            <ul>
+                <li wicket:id="productList">
+                    <a href="ProductsList.html#" wicket:id="linkToProduct">
+                        <wicket:container wicket:id="linksText"/>
+                    </a>
+                    <br/>
+                </li>
+            </ul>
         </div>
-
     </div>
-</body>
+</wicket:extend>
+
 </html>
