--- a/web/src/main/java/com/logicify/shoppingcart/user/AbstractUserPage.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/AbstractUserPage.html
@@ -6,31 +6,12 @@
     <title wicket:id="title">Admin page</title>
     <link rel="stylesheet" href="css/AdminModule.css">
     <script type="text/javascript" language="javascript" src="js/jquery-1.6.4.js"></script>
-    <script type="text/javascript" language="javascript" src="js/tiny_mce/tiny_mce.js"></script>
-    <script language="javascript" type="text/javascript">
-        tinyMCE.init({
-            theme : "advanced",
-            mode : "textareas",
-            plugins : "spellchecker,bbcode",
-            theme_advanced_buttons1 : "bold,italic,underline,undo,redo,link,unlink,image,forecolor,styleselect,removeformat,cleanup,code",
-            theme_advanced_buttons2 : "",
-            theme_advanced_buttons3 : "",
-            theme_advanced_toolbar_location : "top",
-            theme_advanced_toolbar_align : "left",
-            entity_encoding : "raw",
-            add_unload_trigger : false,
-            remove_linebreaks : false,
-            theme_advanced_styles : "Code=codeStyle;Quote=quoteStyle",
-            inline_styles : false,
-            convert_fonts_to_spans : false
-        });
-    </script>
 </head>
 
 <body>
 <div class="pageWrapper">
     <div id="header">
-        <h2>Hello! This is admin interface for product/category module for online shopping cart</h2>
+        <h2>User interface</h2>
     </div>
     <div class="clear"></div>
 
@@ -42,18 +23,9 @@
                         <wicket:container wicket:id="linksText"/>
                     </a>
                 </td>
+
                 <td>
                     <a href="Index.html#" wicket:id="linkToCategoriesListPage" class="MenuItem">
-                        <wicket:container wicket:id="linksText"/>
-                    </a>
-                </td>
-                <td>
-                    <a href="Index.html#" wicket:id="linkToInsertProductPage" class="MenuItem">
-                        <wicket:container wicket:id="linksText"/>
-                    </a>
-                </td>
-                <td>
-                    <a href="Index.html#" wicket:id="linkToInsertCategoryPage" class="MenuItem">
                         <wicket:container wicket:id="linksText"/>
                     </a>
                 </td>
