--- a/web/src/main/java/com/logicify/shoppingcart/user/CategoriesList.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/CategoriesList.html
@@ -2,30 +2,18 @@
       xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.3-strict.dtd"
       xml:lang="en"
       lang="en">
-<head>
-    <title>User page</title>
-    <link rel="stylesheet" href="css/AdminModule.css">
 
-</head>
-<body>
-    <div class="pageWrapper">
+<wicket:extend>
+    <div class="pageContentBlockFullSize">
+        <ul>
+            <li wicket:id="categoryList">
+                <a href="CategoriesList.html#" wicket:id="linkToCategory">
+                    <wicket:container wicket:id="linksText"/>
+                </a>
+                <br/>
+            </li>
+        </ul>
+    </div>
+</wicket:extend>
 
-        <div id="header">
-            <h2>Hello! This is user interface for product/category module for online shopping cart</h2>
-        </div>
-
-        <div class="clear"></div>
-
-        <div class="pageContentBlockFullSize">
-            <ul>
-                <li wicket:id ="categoryList">
-                    <a href="CategoriesList.html#" wicket:id="linkToCategory">
-                        <wicket:container wicket:id="linksText"/>
-                    </a>
-                    <br/>
-                </li>
-            </ul>
-        </div>
-     </div>
-</body>
 </html>
