--- a/web/src/main/java/com/logicify/shoppingcart/user/ProductDetails.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/ProductDetails.html
@@ -2,29 +2,14 @@
       xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.3-strict.dtd"
       xml:lang="en"
       lang="en">
-<head>
-    <title>Product Page</title>
-    <link rel="stylesheet" href="css/AdminModule.css">
-</head>
 
-<body>
-<div class="pageWrapper">
-
-    <div id="header">
-        <h2>Product</h2>
-    </div>
-
-    <div class="clear"></div>
-
+<wicket:extend>
     <div class="pageContentBlockFullSize">
         <div class="pageContentLeftMedium">
             <h3 wicket:id="productName"></h3>
-
             <p wicket:id="productDescription"></p>
-
             <p wicket:id="productPrice"></p>
         </div>
-
         <div class="pageContentRightMedium">
             <h3>Product categories:</h3>
             <ul>
@@ -37,7 +22,6 @@
             </ul>
         </div>
     </div>
-</div>
-</body>
+</wicket:extend>
 
 </html>
