--- a/web/src/main/java/com/logicify/shoppingcart/user/ProductSearchPanel.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/ProductSearchPanel.html
@@ -4,15 +4,12 @@
 
 
 <wicket:panel>
-
     <div class="results" wicket:id="searchResult">
         Search results
     </div>
-
     <wicket:fragment wicket:id="noResults">
         <p wicket:id="errorMessage">No results</p>
     </wicket:fragment>
-
     <wicket:fragment wicket:id="results">
         <ul>
             <li wicket:id="productList">
@@ -25,9 +22,8 @@
         <div wicket:id="navigator"></div>
     </wicket:fragment>
 
-    <wicket:fragment wicket:id="empty">
+    <wicket:fragment wicket:id="empty"/>
 
-    </wicket:fragment>
 </wicket:panel>
 
 </html>
