Finished iteration one! Need to add testts

--- a/web/src/main/java/com/logicify/shoppingcart/admin/CategoryInsert.html
+++ b/web/src/main/java/com/logicify/shoppingcart/admin/CategoryInsert.html
@@ -5,6 +5,7 @@
 
 <wicket:extend>
     <div class="pageContentBlockFullSize">
+        <div class="feedback" wicket:id="feedback"></div>
         <form class="insertProductForm" wicket:id="form">
             <div class="pageContentLeftBig">
                 <table>
