--- a/web/src/main/java/com/logicify/shoppingcart/user/ProductSearchPanel.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/ProductSearchPanel.html
@@ -14,8 +14,10 @@
         <ul>
             <li wicket:id="productList">
                 <a href="ProductsList.html#" wicket:id="linkToProduct">
-                    <wicket:container wicket:id="linksText"/>
+                    <wicket:container wicket:id="productName"/>
                 </a>
+                &nbsp;
+                <wicket:container wicket:id="productPrice"/>
                 <br/>
             </li>
         </ul>
