--- a/web/src/main/java/com/logicify/shoppingcart/user/AbstractUserPage.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/AbstractUserPage.html
@@ -4,7 +4,7 @@
       lang="en">
 <head>
     <title wicket:id="title">Admin page</title>
-    <link rel="stylesheet" href="css/AdminModule.css">
+    <link rel="stylesheet" href="css/UserModule.css">
     <script type="text/javascript" language="javascript" src="js/jquery-1.6.4.js"></script>
 </head>
 
