--- a/web/src/main/java/com/logicify/shoppingcart/user/Index.html
+++ b/web/src/main/java/com/logicify/shoppingcart/user/Index.html
@@ -5,7 +5,30 @@
 
 <wicket:extend>
     <div class="pageContentBlockFullSize">
-        Hello
+        <p class="AboutUs">
+            &emsp;Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi luctus. Duis lobortis. Nulla nec velit.
+            Mauris pulvinar erat non massa. Suspendisse tortor turpis, porta nec, tempus vitae, iaculis semper, pede.
+            <br/>
+            &emsp;Vivamus tortor nisl, lobortis in, faucibus et, tempus at, dui. Nunc risus. Proin scelerisque augue. Nam
+            ullamcorper. Phasellus id massa. Pellentesque nisl. Pellentesque habitant morbi tristique senectus et netus
+            et malesuada fames ac turpis egestas. Nunc augue. Aenean sed justo non leo vehicula laoreet. Praesent ipsum
+            libero, auctor ac, tempus nec, tempor nec, justo.
+            <br/>
+            &emsp;Maecenas ullamcorper, odio vel tempus egestas, dui orci faucibus orci, sit amet aliquet lectus dolor et
+            quam. Pellentesque consequat luctus purus. Nunc et risus. Etiam a nibh. Phasellus dignissim metus eget nisi.
+            Vestibulum sapien dolor, aliquet nec, porta ac, malesuada a, libero. Praesent feugiat purus eget est. Nulla
+            facilisi. Vestibulum tincidunt sapien eu velit. Mauris purus. Maecenas eget mauris eu orci accumsan feugiat.
+            Pellentesque eget velit. Nunc tincidunt.
+            <br/>
+            &emsp;Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi luctus. Duis lobortis. Nulla nec velit.
+            Mauris pulvinar erat non massa. Suspendisse tortor turpis, porta nec, tempus vitae, iaculis semper, pede.
+            Cras vel libero id lectus rhoncus porta. Suspendisse convallis felis ac enim. Vivamus tortor nisl, lobortis
+            in, faucibus et, tempus at, dui. Nunc risus. Proin scelerisque augue. Nam ullamcorper
+            <br/>
+            &emsp;Nunc et risus. Etiam a nibh. Phasellus dignissim metus eget nisi.
+            <br/>
+            &emsp;To all of you, from all of us at Magento Store - Thank you and Happy eCommerce!
+        </p>
     </div>
 </wicket:extend>
 
